--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "next-themes": "^0.4.6",
     "node-appwrite": "^14.1.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-dropzone": "^14.3.5",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.58.1",
     "recharts": "^2.13.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.4",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.67"
